--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mmkv-parser"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2021"
 
 authors = ["Jixun Wu <jixun.moe@gmail.com>"]
@@ -29,5 +29,6 @@ byteorder = { version = "1.5.0", optional = true }
 crc32fast = { version = "1.3.2", optional = true }
 
 [features]
-cipher = ["aes", "cfb-mode", "byteorder", "crc32fast", "clap", "clap_derive", "clap/derive"]
+cipher = ["aes", "cfb-mode", "byteorder", "crc32fast"]
+cli = ["clap", "clap_derive", "clap/derive"]
 default = ["cipher"]
